creacion segunda tabla, manejo de imagenes

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbContextSampleConnection": "Server=(localdb)\\mssqllocaldb;Database=apprueba;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbContextSampleConnection": "Server=(localdb)\\mssqllocaldb;Database=apprueba;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "appruebaContext": "Server=(localdb)\\mssqllocaldb;Database=apprueba.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
